# wordsmith

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  candidate_filtering.go  demo.ipynb  dev.ipynb  etl.ipynb  go.mod  main.go  optimal_strategy.ipynb  pyproject.toml  setup.py
data/: candidates.txt
experiments/: prof.ipynb  prof_commands.sh  results.csv  run.py
go-utils/: utils.go
notebooks/: demo.ipynb  etl.ipynb  strategy_eval.ipynb
rust-impl/src/: cands_sample.rs  main.rs
src/: main.rs
wordsmith/: constants.py  db.c  db.py  db.pyx  game.py  info.py
