[tool.poetry]
name = "wordsmith"
version = "0.1.0"
description = "wordle hacking"
authors = ["Zachary Coleman <zacharywcoleman@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
numpy = "^1.22.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
