[tool.poetry]
name = "wordsmith"
version = "0.1.0"
description = "wordle hacking"
authors = ["Zachary Coleman <zacharywcoleman@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
pre-commit = "^2.18.1"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
